# Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([src/prtget.cpp])
AM_INIT_AUTOMAKE(prt-get,5.19.1)


dnl Determine default prefix
test x$prefix = "xNONE" && prefix="$ac_default_prefix"

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

AC_PREFIX_DEFAULT(/usr)

# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT
AC_CHECK_HEADERS(unistd.h stdio.h sys/types.h sys/stat.h fnmatch.h \ 
                 dirent.h fcntl.h signal.h regex.h)

CFLAGS="$CFLAGS $X_CFLAGS"
CXXFLAGS="$CXXFLAGS $X_CFLAGS"
LIBS="$LIBS $X_LIBS"
LDFLAGS="$LDFLAGS $LIBS $X_PRE_LIBS"

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# I hate you autotools
sysconfdir="/etc"
localstatedir="/var"

# Checks for library functions.
AM_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([Makefile
          src/Makefile
          doc/Makefile
          misc/Makefile])
AC_OUTPUT
